--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="offset-sm-2 col-sm-8 col-12">
     <div class="jumbotron">
-      <h2 class="display-4">
-        Sign up to MyApp
-      </h2>
+      <h2 class="display-4">Sign up to K-comment</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
         <%= devise_error_messages! %>
