--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,58 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-    <title>MyApp</title>
+    <title>K-comment</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="<% if current_page?(root_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url)%>body-main<%end%>">
+    <% unless current_page?(root_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url)%>
+  	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="<%= root_path %>">K-comment</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor02">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item <%= 'active' if current_page?(root_path) %>">
+          <a class="nav-link" href="<%= root_path %>">Главная</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="#">Настройки</a>
+        </li>
+      </ul>
+  		<ul class="navbar-nav">
+  			<li class="nav-item dropdown">
+  				<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></a>
+  				<div class="dropdown-menu header-serach" x-placement="bottom-start">
+  				<form class="form-inline my-2 my-lg-0">
+  				  <input class="form-control mr-sm-2" type="text" placeholder="Search">
+  				  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+  				</form>
+  				</div>
+  		</li>
+  		<li class="nav-item  dropdown">
+  		<% if current_user %>
+  						<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+  								<i class="fa fa-user-circle" aria-hidden="true"></i> <%= current_user.name %> <span class="caret"></span>
+  						</a>
+  						<ul class="dropdown-menu dropdown-user">
+  								<li class="divider"></li>
+  								<li><%= link_to "Выйти", destroy_user_session_url, method: :delete, class: 'btn btn-danger' %></li>
+                  <li><%= link_to 'Back to Homepage', root_url %></li>
+  						</ul><!-- /.dropdown-user -->
+  		 <% end %>
+  				</li>
+  		</ul>
+    </div>
+  </nav>
+  <% end %>
+
+
+
     <div class="container-fluid">
       <%= yield %>
     </div>
