--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,6 +8,9 @@
     <p>
       Welcome <%=current_user.name %>!
     </p>
+    <<p>
+      В вашем магазине товаров <%= @product_count %> шт
+    </p>
 
   </div>
 </div>
