--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -44,5 +44,20 @@
 }
 .dropdown-user {
 text-align: center;
-min-width: 5rem; 
+min-width: 5rem;
+}
+.container-fluid {
+    width: 100%;
+     padding-right: 0px;
+     padding-left: 0px;
+}
+.bg-primary {
+    background-color: #1abc9c!important;
+}
+.page-section {
+    padding: 6rem 0;
+}
+.carousel-inner {
+    border: 1px solid #1abc9c;
+    border-radius: 5px;
 }
