--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,32 +1,217 @@
-<div class="row">
-  <div class="col-12">
-    <div class="clearfix">
-      <p class="float-right">
-        <%= link_to "Log in", new_session_path('user'), class: 'btn btn-primary' %>
-        <%= link_to "Sign up", new_registration_path('user'), class: 'btn btn-primary' %>
-      </p>
-    </div>
-  </div>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white box-shadow">
+  <h4 class="my-0 mr-md-auto font-weight-normal">
+    <strong>K-comment</strong><br>
+    <small>сервис избранных товаров</small>
+  </h4>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-dark" href="#service">О сервисе</a>
+    <a class="p-2 text-dark" href="#setup">Настройка</a>
+    <a class="p-2 text-dark" href="#price">Стоимость</a>
+    <a class="p-2 text-dark" href="#o-nas">О нас</a>
+  </nav>
+  <%= link_to "Log in", new_session_path('user'), class: 'btn btn-primary' %>
+  <%= link_to "Sign up", new_registration_path('user'), class: 'btn btn-outline-primary' %>
 </div>
 
-<div class='row'>
-  <div class='offset-sm-2 col-sm-8 col-12'>
-    <div class='jumbotron'>
-      <h1 class='display-4'>
-        Welcome to MyApp
-      </h1>
-      <p class='lead'>
-      </p>
-      <hr class='mt-4'>
-      <p>
-        Start using the app by signing up as a user (tenant).
-      </p>
-      <p>
-        When you are signing up you are asked for a subdomain. This will be your own subdomain. Everything belonging to your user will be accessible only via this subdomain. Actually in this app it’s only a fake dashboard which belongs to a user. But nevertheless it’s only reachable via a subdomain.
-      </p>
-      <p>
-        After logging in try to access your dashboard through another subdomain even a subdomain which belongs to another user and see what happens.
-      </p>
+<section class="page-section bg-primary text-white mb-0" id="service">
+  <div class="container">
+
+    <!-- About Section Heading -->
+    <h1 class="display-4 text-center text-uppercase text-white pb-4">О сервисе</h1>
+    <!-- About Section Content -->
+    <div class="row">
+      <div class="col-lg-4 ml-auto">
+        <p class="lead">"K-comment - избранные товары" это приложение для CMS Insales. Оно позволяет сделать в магазине раздел с избранными товарами Ваших зарегистрированных клиентов.</p>
+      </div>
+      <div class="col-lg-4 mr-auto">
+        <p class="lead">Это позволит Вашим клиентам получить более качественные сервис от Вашего магазина.</p>
+      </div>
+      <div class="col-lg-4 mr-auto">
+        <p class="lead">Вы сможете просматривать какие товары клиенты откладывают и тем самым предлагать клиентам дополнительную мотивацию для их приобретения.</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+<section class="page-section mb-0 pb-0" id="service-images">
+  <div class="container">
+
+    <!-- About Section Heading -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators d-none">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <%= image_tag "/k-comment1.png", data: { src: "/k-comment1.png" } %>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag "/k-comment2.png", data: { src: "/k-comment2.png" } %>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="icon-prev" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="icon-next" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  </div>
+</section>
+
+<section class="page-section price pt-3" id="price">
+  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Стоимость</h1>
+    <p class="lead">Наши тарифные планы.</p>
+  </div>
+
+  <div class="container">
+    <div class="card-deck mb-3 text-center p-3">
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Бесплатно</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">7 дней<small class="text-muted"></small>
+          </h1>
+          <ul class="text-left mt-3 mb-4">
+            <li>Поддержка</li>
+            <li>
+              <a href="#">Самостоятельная настройка</a>
+            </li>
+          </ul>
+          <a class="btn btn-lg btn-block btn-outline-primary" href="https://auth.insales.ru/login">Установить</a>
+        </div>
+      </div>
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Ежемесячный</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">600 р<small class="text-muted"></small>
+          </h1>
+          <ul class="text-left mt-3 mb-4">
+            <li>Поддержка</li>
+            <li>
+              <a href="#">Самостоятельная настройка</a>
+            </li>
+          </ul>
+          <a class="btn btn-lg btn-block btn-primary" href="https://auth.insales.ru/login">Установить</a>
+        </div>
+      </div>
+    </div>
+    <div class="card-deck mb-3 text-center p-3">
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Пакет 1</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">1800 р
+            <small class="text-muted">/ 3 месяца</small>
+          </h1>
+          <ul class="text-left mt-3 mb-4">
+            <li>Добавление стандартной кнопки "Добавить в Избранное"</li>
+            <li>Добавление стандартной страницы "Избранное"</li>
+            <li>Поддержка</li>
+          </ul>
+          <a class="btn btn-lg btn-block btn-primary" href="https://auth.insales.ru/login">Установить</a>
+        </div>
+      </div>
+      <div class="card mb-4 box-shadow">
+        <div class="card-header">
+          <h4 class="my-0 font-weight-normal">Пакет 2</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">3600 р
+            <small class="text-muted">/ 6 месяцев</small>
+          </h1>
+          <ul class="text-left mt-3 mb-4">
+            <li>Добавление кнопки и настройка стиля "Добавить в Избранное"</li>
+            <li>Добавление страницы и настройка стиля страницы "Избранное"</li>
+            <li>Поддержка</li>
+          </ul>
+          <a class="btn btn-lg btn-block btn-primary" href="https://auth.insales.ru/login">Установить</a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</section>
+<!-- About Section -->
+<section class="page-section bg-primary text-white mb-0" id="o-nas">
+  <div class="container">
+
+    <!-- About Section Heading -->
+    <h1 class="display-4 text-center text-uppercase text-white pb-4">О нас</h1>
+
+    <!-- About Section Content -->
+    <div class="row">
+      <div class="col-lg-4 ml-auto">
+        <p class="lead">Мы - это команда единомышленников, которая собралась чтобы создать решения типовых задач наших клиентов.</p>
+      </div>
+      <div class="col-lg-4 mr-auto">
+        <p class="lead">Мы работаем со следующими технологиями - Ruby on Rils, HTML, CSS, и JavaScript
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<footer class="pt-4 my-md-5 pt-md-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-3 col-md">
+        <h5>K-comment</h5>
+        <h6>сервис избранных товаров</h6>
+        <ul class="list-unstyled text-small">
+          <li>
+            <a class="text-muted" href="+74997042035">84997042035</a>
+          </li>
+          <li>
+            <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
+          </li>
+        </ul>
+        <small class="d-block mb-3 text-muted">&copy; 2019</small>
+      </div>
+      <div class="col-3 col-md">
+        <h5>Меню</h5>
+        <ul class="list-unstyled text-small">
+          <li>
+            <a class="text-muted" href="#service">О сервисе</a>
+          </li>
+          <li>
+            <a class="text-muted" href="#setup">Настройка</a>
+          </li>
+          <li>
+            <a class="text-muted" href="#price">Стоимость</a>
+          </li>
+          <li>
+            <a class="text-muted" href="#o-nas">О нас</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-3 col-md">
+        <h5>Способы оплаты</h5>
+        <ul class="text-small">
+          <li>Счет для юр лиц</li>
+          <li>Visa, Mastercard</li>
+        </ul>
+        <p>Прием платежей организован агрегатором
+          <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
+        </p>
+      </div>
+      <div class="col-3 col-md">
+        <h5>Наши данные</h5>
+        <ul class="list-unstyled text-small">
+          <li>ИП Эмексизов Панаёт Алексеевич</li>
+          <li>Свидетельство о регистрации - 313774610800128</li>
+          <li>ИНН - 772745849012</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
