--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,4 +1,12 @@
 <div class="row">
+  <div class="col-12">
+    <% flash.each do |key, value| %>
+     <%= content_tag(:div, class: "alert alert-#{key} alert-dismissable") do %>
+     <%= value %>
+     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+     <% end %>
+   <% end %>
+    </div>
   <div class="col">
     <h1>Счета</h1>
   </div>
