--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <% if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %>
+  <%= link_to "Войти", new_session_path(resource_name) %>
   <br/>
 <% end %>
 <% if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %>
+  <%= link_to "Зарегистрироваться", new_registration_path(resource_name) %>
   <br/>
 <% end %>
 <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %>
+  <%= link_to "Забыли пароль?", new_password_path(resource_name) %>
   <br/>
 <% end %>
 <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -25,5 +25,5 @@
   <% end %>
 <% end %>
 <p>
-  <%= link_to 'Homepage', root_url %>
+  <%= link_to 'Вернуться на Главную', root_url %>
 </p>
