--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,13 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white box-shadow">
+<div class="index-header d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white box-shadow">
   <h4 class="my-0 mr-md-auto font-weight-normal">
     <strong>K-comment</strong><br>
     <small>сервис избранных товаров</small>
   </h4>
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="#service">О сервисе</a>
-    <a class="p-2 text-dark" href="#setup">Настройка</a>
-    <a class="p-2 text-dark" href="#price">Стоимость</a>
-    <a class="p-2 text-dark" href="#o-nas">О нас</a>
+    <a class="p-2 text-dark" href="/#service">О сервисе</a>
+    <a class="p-2 text-dark" href="/index-setup">Настройка</a>
+    <a class="p-2 text-dark" href="/#price">Стоимость</a>
+    <a class="p-2 text-dark" href="/#o-nas">О нас</a>
   </nav>
   <%= link_to "Log in", new_session_path('user'), class: 'btn btn-primary' %>
   <%= link_to "Sign up", new_registration_path('user'), class: 'btn btn-outline-primary' %>
@@ -160,58 +160,3 @@
 
   </div>
 </section>
-
-<footer class="pt-4 my-md-5 pt-md-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-3 col-md">
-        <h5>K-comment</h5>
-        <h6>сервис избранных товаров</h6>
-        <ul class="list-unstyled text-small">
-          <li>
-            <a class="text-muted" href="+74997042035">84997042035</a>
-          </li>
-          <li>
-            <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
-          </li>
-        </ul>
-        <small class="d-block mb-3 text-muted">&copy; 2019</small>
-      </div>
-      <div class="col-3 col-md">
-        <h5>Меню</h5>
-        <ul class="list-unstyled text-small">
-          <li>
-            <a class="text-muted" href="#service">О сервисе</a>
-          </li>
-          <li>
-            <a class="text-muted" href="#setup">Настройка</a>
-          </li>
-          <li>
-            <a class="text-muted" href="#price">Стоимость</a>
-          </li>
-          <li>
-            <a class="text-muted" href="#o-nas">О нас</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-3 col-md">
-        <h5>Способы оплаты</h5>
-        <ul class="text-small">
-          <li>Счет для юр лиц</li>
-          <li>Visa, Mastercard</li>
-        </ul>
-        <p>Прием платежей организован агрегатором
-          <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
-        </p>
-      </div>
-      <div class="col-3 col-md">
-        <h5>Наши данные</h5>
-        <ul class="list-unstyled text-small">
-          <li>ИП Эмексизов Панаёт Алексеевич</li>
-          <li>Свидетельство о регистрации - 313774610800128</li>
-          <li>ИНН - 772745849012</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
