--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="yandex-verification" content="c284690800bdd189" />
-    <title>K-comment</title>
+    <title>K-comment - сервис избранных товаров</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
-  <body class="<% if current_page?(root_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url)%>body-main<%end%>">
-    <% unless current_page?(root_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url)%>
+  <body class="<% if current_page?(root_url) or current_page?(index_setup_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url)%>body-main<%end%>">
+    <% unless current_page?(root_url) or current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url) or current_page?(index_setup_url)%>
   	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="<%= root_path %>">K-comment</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,5 +64,63 @@
     <div class="container-fluid">
       <%= yield %>
     </div>
+
+    <% unless current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url) %>
+    <footer class="pt-4 pt-md-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-3 col-md">
+            <h5>K-comment</h5>
+            <h6>сервис избранных товаров</h6>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a class="text-muted" href="+74997042035">84997042035</a>
+              </li>
+              <li>
+                <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
+              </li>
+            </ul>
+            <small class="d-block mb-3 text-muted">&copy; 2019</small>
+          </div>
+          <div class="col-3 col-md">
+            <h5>Меню</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a class="text-muted" href="#service">О сервисе</a>
+              </li>
+              <li>
+                <a class="text-muted" href="#setup">Настройка</a>
+              </li>
+              <li>
+                <a class="text-muted" href="#price">Стоимость</a>
+              </li>
+              <li>
+                <a class="text-muted" href="#o-nas">О нас</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-3 col-md">
+            <h5>Способы оплаты</h5>
+            <ul class="text-small">
+              <li>Счет для юр лиц</li>
+              <li>Visa, Mastercard</li>
+            </ul>
+            <p>Прием платежей организован агрегатором
+              <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
+            </p>
+          </div>
+          <div class="col-3 col-md">
+            <h5>Наши данные</h5>
+            <ul class="list-unstyled text-small">
+              <li>ИП Эмексизов Панаёт Алексеевич</li>
+              <li>Свидетельство о регистрации - 313774610800128</li>
+              <li>ИНН - 772745849012</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <% end %>
+
   </body>
 </html>
