--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
       <%= yield %>
     </div>
 
-    <% unless current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url) %>
+    <% unless current_page?(new_user_session_url) or current_page?(new_user_registration_url) or current_page?(insints_url) or current_page?(new_user_password_url) %>
     <footer class="pt-4 pt-md-5">
       <div class="container">
         <div class="row">
