--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -7,8 +7,32 @@
     <a class="p-2 text-dark" href="/#service">О сервисе</a>
     <a class="p-2 text-dark" href="/index-setup">Настройка</a>
     <a class="p-2 text-dark" href="/#price">Стоимость</a>
-    <a class="p-2 text-dark" href="/#o-nas">О нас</a>
+<a class="p-2 text-dark" href="/#o-nas">О нас</a>
   </nav>
   <%= link_to "Log in", new_session_path('user'), class: 'btn btn-primary' %>
   <%= link_to "Sign up", new_registration_path('user'), class: 'btn btn-outline-primary' %>
 </div>
+<section class="page-section mb-0" id="setup">
+  <div class="container">
+
+    <!-- About Section Heading -->
+    <h1 class="display-4 text-center text-uppercase pb-4">Настройка</h1>
+
+    <div class="container">
+      <p>
+        1) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
+      </p>
+      <p>
+        2) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
+      </p>
+      <p>
+        3) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
+      </p>
+      <p>
+        4) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
+      </p>
+
+    </div>
+
+    </div>
+</section>
