--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,14 +1,38 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Clientid:</strong>
+  <strong>Client id:</strong>
   <%= @client.clientid %>
+  <strong>ФИО:</strong>
+  <%= @fio %>
+
 </p>
 
 <p>
-  <strong>Izb productid:</strong>
-  <%= @client.izb_productid %>
+  <strong>Отобранные товары:</strong>
+  <div class="table-responsive">
+  <table class="table table-hover table-condensed table-sm">
+    <thead class="thead-light">
+    <tr>
+      <th>Id товара</th>
+      <th>Название</th>
+      <th>Картинка</th>
+      <th>Цена</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @client_products.each do |pr| %>
+      <tr>
+        <td><%=pr.split(',')[0]%></td>
+        <td><%= link_to "#{pr.split(',')[1]}", "http://"+current_user.insints.first.subdomen+"/product/"+pr.split(',')[2], target: "_blank" %></td>
+        <td><img src="<%=pr.split(',')[3]%>" alt="<%=pr.split(',')[1]%>"></td>
+        <td><%=pr.split(',')[4]%></td>
+      </tr>
+    <% end %>
+      </tbody>
+  </table>
+</div>
 </p>
 
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+
+<%= link_to 'Назад', clients_path , class: "btn btn-outline-secondary" %>
