--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,12 +1,10 @@
 <div class="row">
   <div class="col-12">
     <div class="clearfix">
-      <h1 class="float-left">
-        Dashboard
-      </h1>
+      <h1 class="float-left">Главная</h1>
     </div>
     <p>
-      Welcome <%=current_user.name %>!
+      Добро пожаловать <%=current_user.name %>!
     </p>
     <p>
       В вашем магазине товаров <%= @product_count %> шт
