--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,7 +106,7 @@
             <h5>Способы оплаты</h5>
             <ul class="text-small">
               <li>Счет для юр лиц</li>
-              <li>Visa, Mastercard</li>
+              <li><%= image_tag "/visa-master.png", style:"max-width: 120px;"%></li>
             </ul>
             <p>Прием платежей организован агрегатором
               <a class="text-muted" rel="nofollow noopener" href="http://www.paymaster.ru/" target="_blank">Paymaster</a>
