--- a/app/views/useraccounts/index.html.erb
+++ b/app/views/useraccounts/index.html.erb
@@ -6,10 +6,10 @@
 <div class="row mt-3">
   <div class="col">
     <h3>Регистрация <small><%= current_user.name%> (<%= current_user.subdomain%>)</small></h3>
-    <p>Оплачен до <%= @pay_period %></p>
-  <p>Работает до <%= current_user.valid_until %></p>
-  <p><b>Название магазина:</b> <%= @ins_title %></p>
-  <p><b>Телефон:</b> <%= @ins_phone %></p>
+    <p>Оплачен до <% if @pay_period != ""%><%= @pay_period %><%else%>Бесплатно<%end%></p>
+    <p>Работает до <%= current_user.valid_until %></p>
+    <p><b>Название магазина:</b> <%= @ins_title %></p>
+    <p><b>Телефон:</b> <%= @ins_phone %></p>
 </div>
 <div class="col">
   <h3>Юр лица</h3>
