--- a/app/views/home/index_setup.html.erb
+++ b/app/views/home/index_setup.html.erb
@@ -19,18 +19,46 @@
     <h1 class="display-4 text-center text-uppercase pb-4">Настройка</h1>
 
     <div class="container">
-      <p>
-        1) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-      </p>
-      <p>
-        2) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-      </p>
-      <p>
-        3) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-      </p>
-      <p>
-        4) For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-      </p>
+	  <h1>Инструкция по установке и настройке приложения</h1>
+	  <h2>Установка приложения</h2>
+	  <ol>
+		<li>Авторизуйтесь в бэк-офисе своего магазина, перейдите в раздел Приложения, затем – Центр приложений, найдите приложение "K-comment" и нажмите кнопку Установить.</li>
+	  </ol>
+	  <h2>Настройка приложения</h2>
+	  <ol>
+	  <li>
+		Настройка кнопки в карточке товара
+		<ul>
+			<li>Перейдите в раздел <b>Дизайн</b>.</li>
+			<li>Перейдите в редактирование установленной темы <b>(Редактор HTML/CSS/JS)</b> и выберите сниппет <b>product_form.liquid</b>.</li>
+			<li>В коде найдите строчку  <code>{% unless settings.product_compare_hide %}</code>.</li>
+			<li>Перед это строчкой, выше вставьте следующий коде
+			<code>
+			{%comment%}избранное{%endcomment%}
+				<div style="margin-top: 20px" class="izb-control">
+					<div class="js-izb-add" data-izb-add="{{ product.id }}" >Добавить в избранное</div>
+					<div class="deleteizb js-izb-delete" data-favorites-trigger="{{ product.id }}" data-izb-delete="{{ product.id }}" style="display: none;">Удалить из избранного</div>
+				</div>
+			{%comment%}конец избранное{%endcomment%}
+			</code>
+			</li>
+		</ul>
+
+	  </li>
+	  <li>Настройка страницы для вывода избранных товаров
+		<ul>
+			<li>Перейдите в раздел <b>Контент</b>, <b>Меню и страницы</b>.</li>
+			<li>Создайте новую страницу в разделе <b>"Нет навигации"</b></li>
+			<li>Выберете шаблон <code>page.izb.liquid</code> </li>
+			<li>Сохраните страницу</li>
+			<li>Проверьте, что страница появилась, попробуйте добавить товар в "Избранное".</li>
+			<li>Перейдите на страницу избранного, если там отображаются товары, то все работает правильно.</li>
+			<li>Добавьте ссылку на страницу Избранного в нужное меню.</li>
+		</ul>
+	  </li>
+
+	  <li>При установке другой темы или копии текущей, в нее нужно скопирвать следующие файлы: <code>k-comment-product.liquid, page.izb.liquid </code></li>
+	  </ol>
 
     </div>
 
