--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,11 @@
         <li class="nav-item <%= 'active' if current_page?(dashboard_index_path) %>">
           <a class="nav-link" href="<%= dashboard_index_path %>">Главная</a>
         </li>
+        <% if current_admin %>
+        <li class="nav-item <%= 'active' if current_page?(payments_path) %>">
+          <a class="nav-link" href="<%= payments_path %>">Платежи</a>
+        </li>
+        <% end %>
         <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
           <a class="nav-link" href="<%= clients_path %>">Клиенты и Товары</a>
         </li>
