--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,7 +1,22 @@
 
-<h1>Payments</h1>
+<div class="row">
+  <div class="col-2">
+    <h1>Платежи</h1>
+  </div>
+  <div class="col-2">
 
-<table class="table">
+  </div>
+  <%= search_form_for @search, html: {class: 'form-inline col-3'}  do |f|%>
+    <div class="form-group">
+      <%= f.search_field :invoice_id_eq, placeholder: 'Счет', class: "form-control input-sm"%>
+      <%= f.submit 'Поиск', class: 'btn btn-light' %>
+      <%= link_to 'Сбросить',payments_path, class: 'btn btn-outline-secondary' %>
+    </div>
+  <% end %>
+</div>
+
+<div class="table-responsive">
+<table class="table table-hover table-condensed table-sm">
   <thead class="thead-light">
     <tr>
       <th>User</th>
@@ -19,7 +34,7 @@
   <tbody>
     <% @payments.each do |payment| %>
       <tr>
-        <td><%= link_to payment.user.subdomain, payment %></td>
+        <td><%= link_to payment.user.subdomain , payment %></td>
         <td><%= payment.user.valid_until %></td>
         <td><%= payment.invoice_id %></td>
         <td><%= payment.payplan.period %></td>
@@ -34,6 +49,6 @@
   </tbody>
 </table>
 
-<br>
+</div>
 
-<%# link_to 'New Payment', new_payment_path %>
+	<%= will_paginate @payments %>
