--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
           <a class="nav-link" href="<%= dashboard_index_path %>">Главная</a>
         </li>
         <% if current_admin %>
+        <li class="nav-item <%= 'active' if current_page?(dashboard_users_path) %>">
+          <a class="nav-link" href="<%= dashboard_users_path %>">Пользователи</a>
+        </li>
         <li class="nav-item <%= 'active' if current_page?(payments_path) %>">
           <a class="nav-link" href="<%= payments_path %>">Платежи</a>
         </li>
