--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>User:</strong>
-  <%= @payment.user_id %>
+  <%= @payment.user.subdomain %>
 </p>
 
 <p>
