--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -86,3 +86,22 @@ footer {
   border: 1px solid #1abc9c;
   border-radius: 5px;
 }
+.form-wrap{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+}
+.form-sign-help {
+  max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.alert-devise {
+  position:absolute;top:5%;right:3%;max-width: 350px;z-index: 1;
+}
+.form-signup .alert-devise {
+  top:-15%;
+}
