--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,21 @@
 <style type="text/css">
   body {
-    padding-top: 40px;
-    padding-bottom: 40px;
     background-color: #eee;
   }
 
-  .form-signin {
+  .form-signup {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
   }
-  .form-signin .checkbox,
-  .form-signin .form-signin-heading {
+  .form-signup .checkbox,
+  .form-signup .form-signup-heading {
     margin-bottom: 10px;
   }
-  .form-signin .checkbox {
+  .form-signup .checkbox {
     font-weight: normal;
   }
-  .form-signin .form-control {
+  .form-signup .form-control {
     position: relative;
     height: auto;
     -webkit-box-sizing: border-box;
@@ -25,36 +23,38 @@
     padding: 10px;
     font-size: 16px;
   }
-  .form-signin .form-control:focus {
+  .form-signup .form-control:focus {
     z-index: 2;
   }
-  .form-signin input[type="email"] {
+  .form-signup input[type="email"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
-  .form-signin #user_password_confirmation {
+  .form-signup #user_password_confirmation {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
-  .form-signin input[type="text"] {
+  .form-signup input[type="text"] {
     margin-bottom: -1px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
-  .form-signin #user_subdomain {
+  .form-signup #user_subdomain {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
+  footer {
+    display: none;
+  }
 </style>
 
-<div class="container">
 
+<div class="form-wrap">
   <%= render partial: 'form' %>
-  <div class="form-signin">
-    <%= render "devise/shared/links" %>
+  <div class="form-sign-help">
+  <%= render "devise/shared/links" %>
   </div>
-
 </div>
