--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
         <li class="nav-item <%= 'active' if current_page?(payments_path) %>">
           <a class="nav-link" href="<%= payments_path %>">Платежи</a>
         </li>
+        <li class="nav-item <%= 'active' if current_page?(adminindex_insints_path) %>">
+          <a class="nav-link" href="<%= adminindex_insints_path %>">Интеграции</a>
+        </li>
         <% end %>
         <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
           <a class="nav-link" href="<%= clients_path %>">Клиенты и Товары</a>
