--- a/app/views/insints/adminindex.html.erb
+++ b/app/views/insints/adminindex.html.erb
@@ -24,8 +24,10 @@
       <th>Insalesid</th>
       <th>User</th>
       <th>Статус интегр</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
+
   <tbody>
     <% @insints.each do |insint| %>
       <tr>
